--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,11 +63,36 @@ nav {
 
 /* HERO */
 .hero {
-  max-width: 900px;
+  max-width: 1100px;
   margin: 120px auto 80px;
   padding: 0 30px;
-  text-align: center;
 }
+
+.hero-content {
+  display: grid;
+  grid-template-columns: 1.4fr 1fr;
+  align-items: center;
+  gap: 60px;
+}
+
+.hero-text {
+  text-align: left;
+}
+
+.hero-image {
+  display: flex;
+  justify-content: center;
+}
+
+.hero-image img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 10px solid rgba(0, 0, 0, 0.281);
+  box-shadow: 0 0 80px rgba(0, 0, 0, 0.699);
+}
+
 
 .hero h1 {
   font-size: 2.8rem;
@@ -90,6 +115,7 @@ nav {
 .section::after {
     content: "";
     display: block;
+    width: 100%;
     width: 800px;
     height: 1px;
     margin: 40px auto 0;
@@ -279,19 +305,23 @@ footer {
 .mobile-menu {
   display: none;
   flex-direction: column;
-  background: rgba(0,0,0,0.95);
+  background: rgba(45, 88, 182, 0.233);
   border-top: 1px solid rgba(255,255,255,0.1);
+
+  border-radius: 16px 16px 16px 16px;
+  overflow: hidden;
 }
+
 
 .mobile-menu a {
   padding: 16px 30px;
   text-decoration: none;
   color: #e6e6eb;
-  border-bottom: 1px solid rgba(255,255,255,0.05);
+  border-bottom: 1px solid rgba(143, 162, 187, 0.05);
 }
 
 .mobile-menu a:hover {
-  background: rgba(255,255,255,0.08);
+  background: rgba(39, 94, 165, 0.08);
 }
 
 /* RESPONSIVE RULES */
@@ -302,5 +332,17 @@ footer {
 
   .menu-btn {
     display: block;
+  }
+    .hero-content {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .hero-text {
+    text-align: center;
+  }
+
+  .hero-image {
+    margin-top: 40px;
   }
 }
